# python-assembly-poc

./: CMakeLists.txt  MANIFEST.in  README.md  bottles.asm  hello_world.asm  main.c  nasmcompiler.py  pymult.asm  rect.asm  rect.c  rot13.asm  setup.py  test.py  winnasmcompiler.py
.github/workflows/: python-package.yml
src/: pymult.asm
